style: fix mobile posts spacing

--- a/src/styles/global.sass
+++ b/src/styles/global.sass
@@ -1,10 +1,11 @@
 @use 'variables' as v
 
 main
-  &>div
+  &>div.post-center
     // center body text
     max-width: v.$div-content-width
-    margin: auto
+    margin-left: auto
+    margin-right: auto
     // unocss directives
     --at-apply: "lt-md:mx-8"
   hr
